zokrates_cli/examples/compile_errors/generics/assign_size_mismatch.zok
def foo<N>(field[N] a) -> bool:
	field[3] b = a
	return true


def main(field[1] a):
	assert(foo(a))
	return